Answer a lot of stuff

--- a/report1.tex
+++ b/report1.tex
@@ -300,7 +300,7 @@ Por otro lado, la deconvolución de Richardson-Lucy, al ser procedimiento iterat
 		\includegraphics[scale=0.25]{Simulation deconvolution/ref_np_0.01/RL_50.png}
 		\\
 	\end{tabular}
-	\caption{Matriz de los filtros realizados para recuperar las imágenes con ruido añadido simulado. Cada fila d se corresponde a una figura de \ref{fig:convolutions} (a-d), cada columna indica un método de recuperación}
+	\caption{Matriz de los filtros realizados para recuperar las imágenes con ruido añadido simulado. Cada fila d se corresponde a una figura de \ref{fig:convolutions} (a--d), cada columna indica un método de recuperación}
 \end{figure}
 
 %%%%%%%%%% If using BibTeX:
