Updates from Overleaf

--- a/report1.tex
+++ b/report1.tex
@@ -133,7 +133,7 @@ A continuación se muestra los resultados de manera gráfica para mejor interpre
 	\quad
 	\begin{subfigure}[t]{0.60\textwidth}
 		\centering
-		\includegraphics[width=\textwidth, height=4cm]{lsf_edge}
+		\includegraphics[width=\textwidth, height=4cm]{/lsf_edge.png}
 		\caption{Perfil de intensidad de píxeles en una línea horizontal (izqda) y la derivada de este perfil (drcha). La derivada es igual al LSF}\label{fig:perfil:graph}
 	\end{subfigure}
 	\caption{Perfil de intensidad de una franja grande utilizada para el método indirecto para obtener el MTF, como se describe en la sección~\ref{sec:description:indirecto}}\label{fig:perfil}
