--- a/report2.tex
+++ b/report2.tex
@@ -264,12 +264,13 @@ CUESTIONES:
 CUESTIONES:
 \begin{enumerate}
 \item ¿El rango de distancias donde observamos la imagen del objeto 2D es mayor en el caso iluminación coherente o parcialmente coherente? ¿Qué iluminación es mejor para la observación de objetos 3D?
-\item Para el sistema de filtrado usado en la práctica, la última lente es la pupila de salida del sistema. Determinar la respuesta impulsional y la función de transferencia del sistema en el caso de iluminación (a) coherente; (b) incoherente.
 
+\item Para el sistema de filtrado usado en la práctica, la última lente es la pupila de salida del sistema. Determinar la respuesta impulsional y la función de transferencia del sistema en el caso de iluminación (a) coherente; (b) incoherente.\\
+Continua siendo una iluminacion coherente.
 \end{enumerate}
 
 \section{Conclusiones}
-Se logra obtener una distancia de talbot experimental lo mas precisa posibles no obstante  una meta para el futuro es entender cómo se pueden hacer mediciones más precisas y de esta manera disminuir los errores experimentales en la difracción de campo cercano.
+Se logra obtener una distancia de talbot experimental lo mas precisa posible no obstante  una meta para el futuro es entender cómo se pueden hacer mediciones más precisas y de esta manera disminuir los errores experimentales en la difracción de campo cercano.
 
 %%%%%%%%%% If using BibTeX:
 \bibliography{bibliography}
